# fastapi-clean-architecture

./: .gitignore
src/: README.md  alembic.ini  database.py  main.py  pyproject.toml
src/migrations/: env.py
src/user/application/: user_service.py
src/user/domain/: user.py
src/user/domain/repository/: user_repo.py
src/user/infra/repository/: user_repo.py
src/user/interface/controllers/: user_controller.py
src/user/interface/db_models/: users.py
src/util/: crypto.py
